Creds view and view model completed
- regenerate credential set password button added to the view class
- regenerate credential set password method added to the view model with a new Action enum value
- new switch case inside Submit method added to regenerate a new credential set password
- all switch cases inside Submit method are now implemented

--- a/KeyConcealment/KeyConcealment/Views/CredsView.axaml
+++ b/KeyConcealment/KeyConcealment/Views/CredsView.axaml
@@ -127,7 +127,7 @@
                                                       Binding="{Binding Mail}"
                                                       Width="1.5*" />
                                                 <DataGridTemplateColumn
-                                                      Header="Copy Password"
+                                                      Header="Copy pwd"
                                                       Width="*">
                                                       <DataGridTemplateColumn.CellTemplate>
                                                             <DataTemplate>
@@ -139,7 +139,7 @@
                                                       </DataGridTemplateColumn.CellTemplate>
                                                 </DataGridTemplateColumn>
                                                 <DataGridTemplateColumn
-                                                      Header="Password Info"
+                                                      Header="Pwd Info"
                                                       Width="*">
                                                       <DataGridTemplateColumn.CellTemplate>
                                                             <DataTemplate>
@@ -151,8 +151,20 @@
                                                       </DataGridTemplateColumn.CellTemplate>
                                                 </DataGridTemplateColumn>
                                                 <DataGridTemplateColumn
-                                                      Header="Save Changes"
+                                                      Header="Renew pwd"
                                                       Width="*">
+                                                      <DataGridTemplateColumn.CellTemplate>
+                                                            <DataTemplate>
+                                                                  <Button
+                                                                        Command="{Binding $parent[UserControl].((vm:CredsViewModel)DataContext).RegeneratePwdCommand}"
+                                                                        CommandParameter="{Binding}"
+                                                                        Content="Renew" />
+                                                            </DataTemplate>
+                                                      </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn>
+                                                <DataGridTemplateColumn
+                                                      Header="Save Changes"
+                                                      Width="1.2*">
                                                       <DataGridTemplateColumn.CellTemplate>
                                                             <DataTemplate>
                                                                   <Button
